3.11.17
Merged from 3.0:
 * Backport of CASSANDRA-16905 Further restrict schema column drop/recreate conversions (CASSANDRA-18760)
 * CQLSH emits a warning when the server version doesn't match (CASSANDRA-18745)
 * Fix missing speculative retries in tablestats (CASSANDRA-18767)


3.11.16
 * Moved jflex from runtime to build dependencies (CASSANDRA-18664)
 * Fix CAST function for float to decimal (CASSANDRA-18647)
 * Suppress CVE-2022-45688 (CASSANDRA-18643)
 * Remove unrepaired SSTables from garbage collection when only_purge_repaired_tombstones is true (CASSANDRA-14204)
 * Wait for live endpoints in gossip waiting to settle (CASSANDRA-18543)
 * Fix error message handling when trying to use CLUSTERING ORDER with non-clustering column (CASSANDRA-17818
 * Add keyspace and table name to exception message during ColumnSubselection deserialization (CASSANDRA-18346)
 * Remove unnecessary String.format invocation in QueryProcessor when getting a prepared statement from cache (CASSANDRA-17202)
Merged from 3.0:
 * Fix Requires for Java for RPM package (CASSANDRA-18751)
 * Fix CQLSH online help topic link (CASSANDRA-17534)
 * Remove unused suppressions (CASSANDRA-18724)
 * Upgrade OWASP to 8.3.1 (CASSANDRA-18650)
 * Suppress CVE-2023-34462 (CASSANDRA-18649)
 * Add support for AWS Ec2 IMDSv2 (CASSANDRA-16555)
 * Suppress CVE-2023-35116 (CASSANDRA-18630)
 * Pass taskId from CompactionTask to system.compaction_history (CASSANDRA-12183)
 * Suppress CVE-2023-34455, CVE-2023-34454, CVE-2023-34453 (CASSANDRA-18608)
 * Backport CASSANDRA-10508: Remove hard-coded SSL cipher suites (CASSANDRA-18575)
 * Suppress CVE-2023-2976 (CASSANDRA-18562)
 * Remove dh_python use in Debian packaging (CASSANDRA-18558)
 * Pass down all contact points to driver for cassandra-stress (CASSANDRA-18025)
 * Validate the existence of a datacenter in nodetool rebuild (CASSANDRA-14319)
 * Suppress CVE-2023-2251 (CASSANDRA-18497)


3.11.15
 * Fix the capital P usage in the CQL parser (CASSANDRA-17919)