@@ -1,4 +1,5 @@
 3.11.17
+ * Fix NPE when using udfContext in UDF after a restart of a node (CASSANDRA-18739)
 Merged from 3.0:
  * Backport of CASSANDRA-16905 Further restrict schema column drop/recreate conversions (CASSANDRA-18760)
  * CQLSH emits a warning when the server version doesn't match (CASSANDRA-18745)
